Entity Component System, Part2

--- a/TanmaNabu/TanmaNabu.csproj
+++ b/TanmaNabu/TanmaNabu.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Core\Entitas\DataStructures\" />
     <Folder Include="GameLogic\" />
     <Folder Include="States\" />
   </ItemGroup>
