--- a/TanmaNabu.Core/TanmaNabu.Core.csproj
+++ b/TanmaNabu.Core/TanmaNabu.Core.csproj
@@ -15,7 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SFML.Net" Version="2.5.1" />
   </ItemGroup>
 
 </Project>
